Arbiter spike filtering (#98)
* WIP arbiter history, try jdk 14

* add-exports jvmArg, jdk 17

* WIP

* WIP flapping

* arbiter changes to support flapping detection and notification settings

* use spike filtering nomenclature

* minor naming change

* spike filter tidy up

---------

Co-authored-by: tomas mccandless <tomas.mccandless@workday.com>